--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cloud-cust-gateway</name>
+	<name>cloud-gateway-server</name>
 	<comment></comment>
 	<projects>
 	</projects>
